[package]
name = "contract-for-fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.soroban-sdk]
version = "0.8.0"
features = ["testutils"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies.contract-for-fuzz]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
